pequeños cambios al fusionar

--- a/examenparcial2/estilos.css
+++ b/examenparcial2/estilos.css
@@ -74,6 +74,7 @@ body{
      width: 8%;
     height: 15px;
      display: inline-flex;
+    margin-right: 10px;
 }
 input[type="text"],select{
     
