--- a/examenparcial2/estilos.css
+++ b/examenparcial2/estilos.css
@@ -32,7 +32,7 @@ body{
     background-color: firebrick;
     margin: auto;
     box-shadow: 2px 2px 3px 5px white;
-    padding: 15px;
+    padding: 50px 150px;
     box-sizing: border-box;
 }
 .contenedor .sec-izq{
@@ -68,14 +68,24 @@ body{
     
     margin-bottom: 6px;
 }
+.sec-nombre label, .sec-fecha label, .sec-other label{
+    line-height: 40px;
+}
 
+#genero{
+    
+    line-height: 40px;
+    
+}
 
 #radio{
      width: 8%;
-    height: 15px;
      display: inline-flex;
+    
+    height: 15px;
     margin-right: 10px;
 }
+
 input[type="text"],select{
     
     box-shadow: 5px 2px 10px aqua;
