--- a/examenparcial2/estilos.css
+++ b/examenparcial2/estilos.css
@@ -46,7 +46,7 @@ body{
     width: 50%;
     height: 100%;
     
-    
+ 
     
 }
 
@@ -88,7 +88,7 @@ input[type="text"],select{
     height: 25px;
     
     font-size: 12px;
-    box-shadow: 5px 2px 10px aqua;
+    box-shadow: 5px 2px 10px green;
     
 }
 #enti{
@@ -110,7 +110,7 @@ input[type="text"],select{
     width: 100px;
     margin-right: 30px;
     border-radius: 10px;
-    border: 3px aqua;
+    border: 3px green;
     border-style: solid double; 
     padding: 5px 10px;
     font-weight: bold;
@@ -217,11 +217,19 @@ h2{
 }
 .sec-der .icono{
     
-    margin: auto;
+    
     width: 150px;
     height: 150px;
-    background-image: url(imagenes/fondo1.jpg);
-    margin-top: 20px;
+    background-image: url(imagenes/escudo1.png);
+    background-size: 100% 100%;
+     
     border-radius: 50%;
+    margin: auto;
+    margin-top: 50px;
+   
     
 }
+
+
+
+
