--- a/examenparcial2/estilos.css
+++ b/examenparcial2/estilos.css
@@ -1,9 +1,12 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Prompt:wght@100&display=swap');
+
+
+
 
 body{
     
     background-image: url(imagenes/fondo3.jpg);
-    /*background-color: goldenrod;*/
     background-size: 100vw 100vh;
     background-attachment: fixed;
     
@@ -16,24 +19,22 @@ body{
     font-size: 25px;
     text-align: center;
     font-weight: 900;
+    width: 600px;
+    text-shadow: 15px 25px 27px gray;
+
 }
-/*#requeridos{
-    
-    box-shadow: 5px 2px 5px aqua inset;
-    font-style: italic;
-    
-}*/
+
 .contenedor{
     display: flex;
     width: 850px;
     height: 400px;
-    /*background-color: firebrick;*/
     background: linear-gradient(45deg,firebrick 70%,antiquewhite);
     margin: auto;
     box-shadow: 2px 2px 3px 5px white;
     padding: 20px 20px;
     box-sizing: border-box;
     border-radius: 10px;
+    color: white;
 }
 .contenedor .sec-izq{
     width: 50%;
@@ -65,20 +66,24 @@ body{
 }
 
 .genero{
-  /*  padding: 2px 15px;*/
+
     width: 90%;
-    margin-top: 30px;
+    margin-top: 35px;
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
+    margin-left: 15px;
 }
 #radio-hombre{
     margin: 0px;
+    margin-left: 15px;
     
 }
-.mujer{
-    padding: 0 20px;
+#radio-mujer{
+    margin: 0px;
+    margin-right: 15px;
 }
+
 input, select{
     text-align: center;
 }
@@ -103,6 +108,7 @@ input[type="text"],select{
     padding: 0px 15px;
     display: flex;
     justify-content: center;
+    margin-top: 15px;
 }
 #submit{
      display: inline-flex;
@@ -156,8 +162,6 @@ h2{
 }
 
 .input-nombre{
-    
-    
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -170,7 +174,9 @@ h2{
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: space-between;
-    margin-right: 20px;
+    margin-right: 10px;
+    font-size: 15px;
+    margin-left: 15px;
     
 }
 
@@ -179,7 +185,8 @@ h2{
     padding: 5px 0px;
     display: flex;
     align-items: center;
-    
+    margin-right: 30px;
+    margin-left: 15px;
 }
 .label-fecha{
     
@@ -194,14 +201,14 @@ h2{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    
+    margin-top: 15px;
 }
 
 .sec-other{
     
     height: 95px;
     display: flex;
-    /*justify-content: space-between;*/
+    
 }
 .label-other{
     display: flex;
@@ -216,20 +223,52 @@ h2{
     
 }
 .sec-der .icono{
-    
-    
+
     width: 150px;
     height: 150px;
     background-image: url(imagenes/escudo1.png);
     background-size: 100% 100%;
-     
     border-radius: 50%;
     margin: auto;
-    margin-top: 50px;
-   
-    
+    margin-top: 40px;
+    box-shadow: 9px 9px 9px rgba(1,0,0,0.35);
 }
 
 
 
+.footer{
+    color:red;
+    text-decoration: none;
+   
+    text-align: center;
+    border-radius: 20px;
+    width: 30%;
+    box-sizing: border-box;
+    color: darkgreen;
+    margin: auto;
+}
+.footer .iconos [class^="icon-"]{
+    display: inline-block;
+    color: darkgreen;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 10px;
+    background: white;
+    border-radius: 50%;
+    line-height: 20px;
+}
+.footer .iconos [class^="icon-"]:hover{
+    transition: all 1s ease .1s;
+    transform: scale(2) rotate3d(0,1,0,720deg);
+    color: red;
+    background: rgba(0,0,0,0.5);
+    box-shadow: white 3px 3px 3px inset;
+    
+}
 
+.iconos{
+   
+    
+    margin-top: 30px;;
+    
+}
