--- a/examenparcial2/estilos_mostrar.css
+++ b/examenparcial2/estilos_mostrar.css
@@ -3,7 +3,7 @@
 body{
     
     background-image: url(imagenes/fondo3.jpg);
-    /*background-color: goldenrod;*/
+    /*background-color: red;*/
     background-size: 100vw 100vh;
     background-attachment: fixed;
     
@@ -13,12 +13,26 @@ h1{
     text-align: center;
     margin: -45px;
     padding: 10px;
+    margin-top: 45px;
+    /*color: white;*/
     
 }
 .titulo{
     text-align: center;
-    padding: 50px;
-    margin: 10px;
+    /*padding: 60px;*/
+    margin: auto;
+    box-shadow: 2px 2px 3px 5px white;
+    font-weight: 900;
+    font-family: 'Prompt', sans-serif;
+    width: 600px;
+    text-shadow: 15px 25px 27px gray;
+    box-sizing: border-box;
+    border-radius: 30px;
+    color: white;
+    right: 500px;
+    margin-top: 50px;
+    font-size: 30px;
+    
 }
 .contenedor{
     width: 1000px;
@@ -35,6 +49,9 @@ h1{
     */
     border-radius: 50px;
     box-shadow: white 5px 5px 10px inset;
+    background: linear-gradient(45deg,firebrick 70%,antiquewhite);
+    
+    
 }
 table{
     width: 100%;
@@ -45,6 +62,9 @@ table{
     padding: -150px 40px;
     text-align: center;
     margin: -5px;
+    margin-top: 50px;
+    font-size: 30px;
+    /*color: white;*/
 }
 tr{
     
@@ -52,7 +72,7 @@ tr{
 }
  td{
     
-    border: 2px solid black;
+    border: 3px solid black;
     
     
 }
@@ -71,11 +91,12 @@ td{
     /*left: 500px;*/
     padding: 20px;
     margin: 5px;
+    cursor: pointer;
 }
 img{
     
-    width: 200px;
-     height: 200px;
+    width: 150px;
+     height: 150px;
     vertical-align: top;
    
 }
@@ -93,13 +114,13 @@ img{
 .footer{
     color:red;
     text-decoration: none;
-    padding: 10px;
+    /*padding: 10px;*/
     text-align: center;
     border-radius: 20px;
-    width: 50%;
+    width: 30%;
     box-sizing: border-box;
     color: darkgreen;
-    margin-top: 35px;
+    margin-top: 27px;
 }
 .footer .iconos [class^="icon-"]{
     display: inline-block;
@@ -129,9 +150,9 @@ img{
 .botones{
     width: 50%;
     display: flex;
-    justify-content: flex-end;
-    /*align-items: center;*/
-    
+    justify-content:flex-end;
+    align-items: center;
+    color: white;
 }
 button{
     margin-top: 20px;
@@ -144,35 +165,18 @@ button{
     box-sizing: border-box;
     cursor: pointer;
 }
-button:hover{
-    
+
+.iconos{
+    /*display: flex;*/
+    justify-content: center;
     
 }
 
-/*.redes{
-    margin-top: 50px;
-    
-    
-}*/
-.iconos{
-    
-    display: flex;
-    justify-content: center;
-    
-    
-}
-/*.redes [class^="icon-"]{
-    
-    text-decoration: none;
-    color: black;
-    margin-right: 15px;
-    
-    
-}*/
 .frase{
     display: flex;
     font-family: 'Prompt', sans-serif;
     font-size: 15px;
     justify-content: center;
     color: darkgreen;
+    margin-top: 5px;
 }
