--- a/examenparcial2/estilos.css
+++ b/examenparcial2/estilos.css
@@ -16,7 +16,7 @@ body{
 .banda{
     width: 100%;
     height: 120px;
-    background-color: #61D416;
+    background-color: #314D3E;
     padding: 10px 15px;
     box-sizing: border-box;
     margin: auto;
@@ -26,17 +26,22 @@ body{
     
 }
 .banda .img1{
-    width: 100px;
+    width: 220px;
     height: 100px;
     background-color: aqua;
-    border-radius: 50%;
+    background-image: url(imagenes/fondo4.jpg);
+    background-size: 100vw 100vh;
+    background-attachment: fixed;
+    
+    /*border-radius: 50%;*/
 }
 
 .banda .img2{
-    width: 100px;
+    width: 220px;
     height: 100px;
-    background-color: aqua;
-    border-radius: 50%;
+    /*background-color: aqua;
+    background-image: url(imagenes/fondo4.jpg);
+    /*border-radius: 50%;*/
     
     
 }
