--- a/examenparcial2/estilos_mostrar.css
+++ b/examenparcial2/estilos_mostrar.css
@@ -49,7 +49,7 @@ h1{
     */
     border-radius: 50px;
     box-shadow: white 5px 5px 10px inset;
-    background: linear-gradient(45deg,firebrick 70%,antiquewhite);
+    background: linear-gradient(45deg,rgba(178,34,34,0.6) 70%,antiquewhite);
     
     
 }
@@ -179,4 +179,37 @@ button{
     justify-content: center;
     color: darkgreen;
     margin-top: 5px;
+}
+
+.banda{
+    width: 100%;
+    height: 120px;
+    background-color: #314D3E;
+    padding: 10px 15px;
+    box-sizing: border-box;
+    margin: auto;
+    color: white;
+    font-size: 50px;
+    font-weight: 550;
+    /*FLEXBOX*/
+    display: flex;
+    justify-content: space-between;
+    
+}
+.banda .img1{
+    width: 130px;
+    height: 30px;
+    justify-content: center;
+    
+}
+
+.banda .img2{
+    width: 130px;
+    height: 30px;
+    justify-content: center;
+}
+.banda .texto-banda{
+    
+    margin-top: 40px;
+    font-size: 30px;
 }
