--- a/examenparcial2/estilos_mostrar.css
+++ b/examenparcial2/estilos_mostrar.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2family=Anton&family=Prompt:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Prompt:wght@100&display=swap');
 
 body{
     
@@ -172,15 +172,6 @@ button{
     
 }
 
-.frase{
-    display: flex;
-    font-family: 'Prompt', sans-serif;
-    font-size: 15px;
-    justify-content: center;
-    color: darkgreen;
-    margin-top: 5px;
-}
-
 .banda{
     width: 100%;
     height: 120px;
@@ -212,4 +203,13 @@ button{
     
     margin-top: 40px;
     font-size: 30px;
+}
+
+.frase{
+    display: flex;
+    font-family: 'Prompt';
+    font-size: 15px;
+    justify-content: center;
+    color: darkgreen;
+    margin-top: 5px;
 }
