--- a/examenparcial2/estilos_mostrar.css
+++ b/examenparcial2/estilos_mostrar.css
@@ -6,9 +6,46 @@ body{
     /*background-color: red;*/
     background-size: 100vw 100vh;
     background-attachment: fixed;
+    padding: 0px;
+    margin: 0px;
+}
+.banda{
+    width: 100%;
+    height: 120px;
+    background-color: #314D3E;
+    padding: 10px 15px;
+    box-sizing: border-box;
+    margin: auto;
+    color: white;
+    font-size: 50px;
+    font-weight: 550;
+    /*FLEXBOX*/
+    display: flex;
+    justify-content: space-between;
     
 }
+.banda .img1{
+    background-image: url("./imagenes/gob.png");
+    background-size: 100% 100%;
+    width: 130px;
+    height: 30px;
+    justify-content: center;
+    vertical-align: top;
+}
 
+.banda .img2{
+     background-image: url("./imagenes/gob.png");
+    background-size: 100% 100%;
+    width: 130px;
+    height: 30px;
+    justify-content: center;
+    vertical-align: top;
+}
+.banda .texto-banda{
+    
+    margin-top: 40px;
+    font-size: 30px;
+}
 h1{
     text-align: center;
     margin: -45px;
@@ -172,38 +209,7 @@ button{
     
 }
 
-.banda{
-    width: 100%;
-    height: 120px;
-    background-color: #314D3E;
-    padding: 10px 15px;
-    box-sizing: border-box;
-    margin: auto;
-    color: white;
-    font-size: 50px;
-    font-weight: 550;
-    /*FLEXBOX*/
-    display: flex;
-    justify-content: space-between;
-    
-}
-.banda .img1{
-    width: 130px;
-    height: 30px;
-    justify-content: center;
-    
-}
 
-.banda .img2{
-    width: 130px;
-    height: 30px;
-    justify-content: center;
-}
-.banda .texto-banda{
-    
-    margin-top: 40px;
-    font-size: 30px;
-}
 
 .frase{
     display: flex;
