modificiones finales en estilos

--- a/examenparcial2/estilos.css
+++ b/examenparcial2/estilos.css
@@ -23,7 +23,7 @@ body{
     /*FLEXBOX*/
     display: flex;
     justify-content: space-between;
-    
+    align-items: center;
 }
 .banda .img1{
      background-image: url("./imagenes/gob.png");
